cmake_minimum_required(VERSION 3.28)
project(Algoritmos_y_Estructura_de_Datos)

set(CMAKE_CXX_STANDARD 20)

add_executable(Algoritmos_y_Estructura_de_Datos main.cpp
        Sem2_Listas_Enlazadas_Simples/Teoria_26_08.cpp
        Sem_3_Listas_Dobles/Teoria_02_08.cpp
        Sem2_Listas_Enlazadas_Simples/Lab1_27_08.cpp)
